[project]
name = "geoip"
version = "0.0.11"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Bindings for the GeoIP library"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-geoip"
repository = "https://github.com/jedisct1/rust-geoip"

[lib]
name = "geoip"
path = "src/geoip/lib.rs"

[dependencies]
geoip-sys = "^0.0.10"
rustc-serialize = "^0.3.16"
libc = "^0.2.6"
