[project]
name = "geoip"
version = "0.0.12"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Bindings for the GeoIP library"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-geoip"
repository = "https://github.com/jedisct1/rust-geoip"
categories = ["api-bindings", "external-ffi-bindings"]

[badges]
travis-ci = { repository = "jedisct1/rust-geoip" }
appveyor = { repository = "jedisct1/rust-geoip" }

[lib]
name = "geoip"
path = "src/geoip/lib.rs"

[dependencies]
geoip-sys = "^0.0.12"
rustc-serialize = "^0.3.16"
libc = "^0.2.20"
lazy_static = "^0.2.1"
