[project]
name = "geoip"
version = "0.0.13"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Bindings for the GeoIP library"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-geoip"
repository = "https://github.com/jedisct1/rust-geoip"
edition = "2018"

[lib]
name = "geoip"
path = "src/geoip/lib.rs"

[dependencies]
geoip-sys = "0.0.13"
rustc-serialize = "0.3"
libc = "0.2.48"
lazy_static = "1.2"
