[package]
name = "geoip-sys"
version = "0.0.13"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Low-level bindings for the GeoIP library"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-geoip"
repository = "https://github.com/jedisct1/rust-geoip"
edition = "2018"

[dependencies]
libc = "0.2"
